styles.css
body {
  display: flex;
  flex-direction:column;
  align-items: center;
}
.bg-img {
  background-image: url(
"https://i.ibb.co/CBW4fk7/BDB166-B4-C7-A4-41-A4-A6-DC-C65-F1-DDD391-C.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

}
form {
  justify-content: center;
  align-content: center;
  padding: 20px 50px;
  border-radius: 5px;
  background: #F5FFFF;
}

input {
  border: none;
  border-radius: 0px;
  background: #F5FFFF;
  border-bottom: 1px black solid;
}

.submit {
  background: red;
  color: black;
  border: none;
  width: 150px;
  height: 25px;
  text-align: center;
  border-radius: 0px;
}
.button {
  background: red;
  color: black;
  border: none;
  width: 150px;
  height: 25px;
  text-align: center;
  border-radius: 0px;
}

::placeholder {
  color: grey;
}

input[type=button] {
  border: none;
  background: #F5FFFF;
  color: blue;
}

.allTopButtons {
  display: flex;
  min-width: 100%;
  max-width: 100%;
  max-height: 30%;
}

.TopTXTbuttons {
 align-content: right;
} 

.SignInHome {
  background: #000000;
  color: white;
  font-family: Ebrima;
  font-weight: bold;
  font-size: large;
  border-radius: 10px;
  height: 35px;
  width: 100px;
  border: none;
}
.SignUpHome {
  background: #000000;
  color: white;
  font-family: Ebrima;
  font-weight: bold;
  font-size: large;
  border-radius: 10px;
  height: 35px;
  width: 100px;
  border: none;
}

.HomeButton {
  background: transparent;
  color: white;
  font-family: Ebrima;
  font-weight: bold;
  font-size: large;
  border-radius: 10px;
  height: 35px;
  width: 100px;
  border: none;
}

.FinishedProjsButton {
  background: transparent;
  color: white;
  font-family: Ebrima;
  font-weight: bold;
  font-size: large;
  border-radius: 10px;
  height: 35px;
  width: 160px;
  border: none;
}

.donationButton {
  background: transparent;
  color: white;
  font-family: Ebrima;
  font-weight: bold;
  font-size: large;
  border-radius: 10px;
  height: 35px;
  width: 100px;
  border: none;
  padding-right: 100px;
  padding-left: 10px;
}

.contactButton {
  background: transparent;
  color: white;
  font-family: Ebrima;
  font-weight: bold;
  font-size: large;
  border-radius: 10px;
  height: 35px;
  width: 100px;
  border: none;
  padding-right: 200px;
}

.allTopButtons {
  padding-left: 90%;
}

.bg {
  background: linear-gradient(275deg, #324A69, #57738B);
}

.slider {
  width: 50%;
  height: 50%;
  background-color: yellow;
  margin-left: auto;
  margin-right: auto;
  margin-top: 0px;
  text-align: center;
  overflow: hidden;
}
.image-container {
  width: 200%;
  background-color: pink;
  height: 50%;
  clear: both;
  position: relative;
  -webkit-transition: left 1s;
  -moz-transition: left 1s;
  -o-transition: left 1s;
  transition: left 1s;
}
.slide {
  float: left;
  margin: 0px;
  padding: 0px;
  position: relative;
}
#slide-1:target ~ .image-container {
  left: 0px;
}
#slide-2:target ~ .image-container {
  left: -100%;
}
#slide-3:target ~ .image-container {
  left: -200%;
}
#slide-4:target ~ .image-container {
  left: -300%;
}
.buttons {
  position: relative;
  top: -20px;
}
.buttons a {
  display: inline-block;
  height: 15px;
  width: 15px;
  border-radius: 50px;
  background-color: black;
}

